changed font location

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Prompt&display=swap');
+
+*{
+  font-family: 'Prompt', sans-serif;
+}
+
 body{
   margin: 0px;
   padding: 0px;
